--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,8 +12,6 @@ AllCops:
 
 Layout/LineLength:
   Max: 120
-Layout/EndOfLine:
-  EnforcedStyle: lf
 Metrics/MethodLength:
   Include:
     - "app/controllers/*"
@@ -27,7 +25,7 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
-  IgnoredMethods: ['describe']
+  AllowedMethods: ['describe']
   Max: 30
 
 Style/Documentation:
@@ -60,3 +58,4 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+  
